test/message/events_unhandled_error_common_trace.out
events.js:*
      throw er; // Unhandled 'error' event
      ^

Error: foo:bar
    at bar (*events_unhandled_error_common_trace.js:*:*)
    at foo (*events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (*events_unhandled_error_common_trace.js:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:*:*)
    at Module.load (internal/modules/cjs/loader.js:*:*)
    at tryModuleLoad (internal/modules/cjs/loader.js:*:*)
    at Function.Module._load (internal/modules/cjs/loader.js:*:*)
    at Function.Module.runMain (internal/modules/cjs/loader.js:*:*)
    at internal/main/run_main_module.js:*:*
Emitted 'error' event at:
    at quux (*events_unhandled_error_common_trace.js:*:*)
    at Object.<anonymous> (*events_unhandled_error_common_trace.js:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    [... lines matching original stack trace ...]
    at internal/main/run_main_module.js:*:*
